# voxora

./: README.md
backend/: .env  .env.example  README.md  pyproject.toml  voxora.db
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  init_db.py
backend/app/models/: __init__.py  chapter.py  highlight.py  media_file.py  note.py  project.py  speaker.py  transcript.py  transcript_segment.py  transcription_job.py
backend/app/routers/: health.py
backend/app/routers/v1/: api.py  chapters.py  diagnostics.py  highlights.py  jobs.py  media.py  notes.py  projects.py  runtime.py  settings.py  transcripts.py
backend/app/schemas/: __init__.py  chapter.py  highlight.py  media_file.py  note.py  project.py  speaker.py  transcript.py  transcript_segment.py  transcription_job.py
backend/app/services/: chapter_service.py  diagnostics_service.py  diarization_service.py  export_service.py  file_service.py  highlight_service.py  job_service.py  note_service.py  project_service.py  runtime_service.py  settings_service.py  transcript_service.py  transcription_service.py
backend/tests/: test_main.py
frontend/: next.config.mjs  package.json
frontend/app/: layout.js  page.js
frontend/app/(app)/: layout.js  page.js
frontend/app/dashboard/: layout.js
frontend/app/media/: loading.js  page.js
frontend/app/transcripts/: loading.js  page.js
frontend/components/: app-shell.js  breadcrumbs.js  providers.js
frontend/components/dashboard/: queue-panel.js  recent-panel.js  (+2 more)
frontend/lib/: api.js  env.js
(+73 files in other folders)
